# graduation-project

./: .clang-format  .gitignore  README.md  build.bat  env.bat
assets/samples/: ll_expr.txt  lr1_expr.txt  main.cpp
cpp/main/: CMakeLists.txt  build.bat
cpp/main/src/: ErrorDialog.cpp  ErrorDialog.h  demo_ll_alogrithm.cpp  demo_ll_alogrithm.h  demo_ll_alogrithm.ui  demo_ll_window.ui  demo_lr0_alogrithm.cpp  demo_lr0_alogrithm.h  demo_lr0_window.ui  demo_lr1_alogrithm.cpp  demo_lr1_alogrithm.h  demo_lr1_window.ui  error_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cpp/main/src/ipc/: base.cpp  base.h  ipc.cpp  ipc.h  types.h  util.cpp  util.h
cpp/main/src/rpc/: base.cpp  base.h  rpc.cpp  rpc.h
cpp/main/src/util/: layout.cpp  layout.h
cpp/main/src/view/: HorizontalScrollArea.cpp  HorizontalScrollArea.h
cpp/main/src/widget/: ClickableLabel.cpp  ClickableLabel.h  DemoWidget.cpp  DemoWidget.h  LLVariableWidget.cpp  LLVariableWidget.h  LR0VariableWidget.cpp  LR0VariableWidget.h  LR1VariableWidget.cpp  LR1VariableWidget.h
cpp/main/ts/: main_zh_CN.xml
cpp/qscintilla/: build.bat  qscintilla2_qt6.lib
golang/startup/: build.bat  go.mod  main.go
golang/startup/debug/: debug.go
golang/startup/production/: generate.go  lexer.go  lexer_test.go  production_test.go  types.go
golang/startup/production/process/: code.go  grammer.go  ll.go  lr0.go  lr0item.go  lr1.go  lr1item.go  serial.go
golang/startup/service/: base.go  helloservice.go  ll.go  lr0.go  lr1.go  production.go
golang/startup/util/set/: hashset.go  intset.go  set_test.go  (+1 more)
(+10 files in other folders)
